替换掉不旧方法